@@ -101,6 +101,7 @@ SEXP as_det_obj(double val, int log, int sign);
 SEXP get_factors(SEXP obj, char *nm);
 SEXP set_factors(SEXP obj, SEXP val, char *nm);
 SEXP R_set_factors(SEXP obj, SEXP val, SEXP name, SEXP warn);
+SEXP R_empty_factors(SEXP obj, SEXP warn);
 
 #if 0
 SEXP dgCMatrix_set_Dim(SEXP x, int nrow);
